--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
