--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
+    "react-icons": "^4.3.1",
     "react-lazyload": "^3.2.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
@@ -32,22 +34,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "@vitejs/plugin-react": "^4.3.1",
-    "assert": "^2.1.0",
-    "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
-    "crypto-browserify": "^3.12.0",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "process": "^0.11.10",
-    "stream-browserify": "^3.0.0",
     "style-loader": "^4.0.0",
-    "util": "^0.12.5",
     "vite": "^5.2.13",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
