--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "firebase": "^10.12.2",
+    "html-webpack-plugin": "^5.5.3",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -20,7 +21,7 @@
     "web-vitals": "^4.1.1"
   },
   "scripts": {
-    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack-dev-server --mode development",
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -41,9 +42,9 @@
     "file-loader": "^6.2.0",
     "style-loader": "^4.0.0",
     "vite": "^5.2.13",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.3"
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   },
   "browserslist": {
     "production": [
