--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.2",
     "html-webpack-plugin": "^5.5.3",
+    "mark.js": "^8.11.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
